# Day-1-starter-project

./: Day1_Embedded_C_Setup_CMake_QEMU_Bangla.docx  README.md
embedded-c-day1-starter/: .gitignore  README.md
embedded-c-day1-starter/01-native-hello/: CMakeLists.txt
embedded-c-day1-starter/01-native-hello/include/: app.h
embedded-c-day1-starter/01-native-hello/src/: main.c
embedded-c-day1-starter/02-qemu-cortexm3/: CMakeLists.txt  arm-none-eabi.cmake  startup.c
embedded-c-day1-starter/02-qemu-cortexm3/src/: main.c
